# node-tool-wrapper

./: .gitignore  .ntw.sh  README.adoc  install.sh  jest.config.js  main.py  nodew  npmw  package.json  pnpmw  pyproject.toml  test.Dockerfile  test.sh  tsconfig.json  yarnw
.github/workflows/: build.yml
test/: install.test.ts
tests/: test_install.py
