[project]
name = "node-tool-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.4.2",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
